[OPENMEETINGS-954] Mobile service is updated to work with mobile client; number of blocked operations reduced; code clean-up
git-svn-id: https://svn.apache.org/repos/asf/openmeetings/trunk/singlewebapp@1644160 13f79535-47bb-0310-9956-ffa450edef68