@@ -30,6 +30,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicLong;
 
 import org.apache.openmeetings.core.data.calendar.management.AppointmentLogic;
 import org.apache.openmeetings.core.data.conference.RoomManager;
@@ -108,9 +109,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	@Autowired
 	private ServerDao serverDao;
 
-	public static String lineSeperator = System.getProperty("line.separator");
-
-	private static long broadCastCounter = 0;
+	private static AtomicLong broadCastCounter = new AtomicLong(0);
 
 	public synchronized void resultReceived(IPendingServiceCall arg0) {
 		// TODO Auto-generated method stub
@@ -247,8 +246,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 
 			List<Client> screenSharerList = new LinkedList<Client>();
 
-			Client currentClient = this.sessionManager
-					.getClientByStreamId(streamid, null);
+			Client currentClient = sessionManager.getClientByStreamId(streamid, null);
 
 			for (Client rcl : sessionManager.getClientListByRoomAll(currentClient.getRoom_id())) {
 				if (rcl.isStartStreaming()) {
@@ -387,13 +385,10 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
         String streamid = current.getClient().getId();
         for (IConnection conn : current.getScope().getClientConnections()) {
             if (conn != null) {
-                Client rcl = this.sessionManager
-                        .getClientByStreamId(conn
-                                .getClient().getId(), null);
+                Client rcl = sessionManager.getClientByStreamId(conn.getClient().getId(), null);
                 if (rcl == null) {
                     // continue;
-                } else if (rcl.getIsScreenClient() != null
-                        && rcl.getIsScreenClient()) {
+                } else if (rcl.getIsScreenClient() != null && rcl.getIsScreenClient()) {
                     // continue;
                 } else {
                     if (!streamid.equals(rcl.getStreamid())) {
@@ -563,20 +558,13 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 
 						Client rcl = sessionManager.getClientByStreamId(cons.getClient().getId(), null);
 
-						/*
-						 * Check if the Client does still exist on the
-						 * list
-						 */
+						// Check if the Client does still exist on the list
 						if (rcl == null) {
 							log.debug("For this StreamId: " + cons.getClient().getId() + " There is no Client in the List anymore");
 							continue;
 						}
 						
-						/*
-						 * Do not send back to sender, but actually
-						 * all other clients should receive this
-						 * message swagner 01.10.2009
-						 */
+						//Do not send back to sender, but actually all other clients should receive this message swagner 01.10.2009
 						if (!currentClient.getStreamid().equals(rcl.getStreamid())) {
 							// add Notification if another user isrecording
 							log.debug("###########[roomLeave]");
@@ -612,7 +600,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 			}
 
 			if (removeUserFromSessionList) {
-				this.sessionManager.removeClient(currentClient.getStreamid(), null);
+				sessionManager.removeClient(currentClient.getStreamid(), null);
 			}
 		} catch (Exception err) {
 			log.error("[roomLeaveByScope]", err);
@@ -647,7 +635,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 
 				currentClient.setScreenPublishStarted(true);
 
-				sessionManager.updateClientByStreamId(current.getClient().getId(), currentClient, false, null);
+				sessionManager.updateClientByStreamId(streamid, currentClient, false, null);
 			}
 			//If its an audio/video client then send the session object with the full data to everybody
 			else if (currentClient.getIsAVClient()) {
@@ -824,8 +812,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 		try {
 			log.debug("-----------  addModerator: " + publicSID);
 
-			Client currentClient = this.sessionManager
-					.getClientByPublicSID(publicSID, false, null);
+			Client currentClient = sessionManager.getClientByPublicSID(publicSID, false, null);
 
 			if (currentClient == null) {
 				return -1L;
@@ -834,11 +821,9 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 
 			currentClient.setIsMod(true);
 			// Put the mod-flag to true for this client
-			this.sessionManager.updateClientByStreamId(
-					currentClient.getStreamid(), currentClient, false, null);
+			sessionManager.updateClientByStreamId(currentClient.getStreamid(), currentClient, false, null);
 
-			List<Client> currentMods = this.sessionManager
-					.getCurrentModeratorByRoom(room_id);
+			List<Client> currentMods = sessionManager.getCurrentModeratorByRoom(room_id);
 			
 			//Send message to all users
 			syncMessageToCurrentScope("setNewModeratorByList", currentMods, true);
@@ -855,13 +840,11 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 
 			IConnection current = Red5.getConnectionLocal();
 			String streamid = current.getClient().getId();
-			Client currentClient = this.sessionManager
-					.getClientByStreamId(streamid, null);
+			Client currentClient = sessionManager.getClientByStreamId(streamid, null);
 
 			@SuppressWarnings("rawtypes")
 			Map cursor = (Map) item;
-			cursor.put("streamPublishName",
-					currentClient.getStreamPublishName());
+			cursor.put("streamPublishName", currentClient.getStreamPublishName());
 
 			// Notify all users of the same Scope
 			for (IConnection conn : current.getScope().getClientConnections()) {
@@ -874,8 +857,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 						} else if (SessionVariablesUtil.isAVClient(client)) {
 							// AVClients or potential AVClients do not receive events
 							continue;
-						} if (client.getId().equals(
-									current.getClient().getId())) {
+						} if (client.getId().equals(current.getClient().getId())) {
 							// don't send back to same user
 							continue;
 						}
@@ -895,8 +877,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 			IConnection current = Red5.getConnectionLocal();
 			// String streamid = current.getClient().getId();
 
-			Client currentClient = this.sessionManager
-					.getClientByPublicSID(publicSID, false, null);
+			Client currentClient = sessionManager.getClientByPublicSID(publicSID, false, null);
 
 			if (currentClient == null) {
 				return -1L;
@@ -905,11 +886,9 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 
 			currentClient.setIsMod(false);
 			// Put the mod-flag to true for this client
-			this.sessionManager.updateClientByStreamId(
-					currentClient.getStreamid(), currentClient, false, null);
+			sessionManager.updateClientByStreamId(currentClient.getStreamid(), currentClient, false, null);
 
-			List<Client> currentMods = this.sessionManager
-					.getCurrentModeratorByRoom(room_id);
+			List<Client> currentMods = sessionManager.getCurrentModeratorByRoom(room_id);
 
 			// Notify all clients of the same scope (room)
 			for (IConnection conn : current.getScope().getClientConnections()) {
@@ -923,9 +902,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 							// AVClients or potential AVClients do not receive events
 							continue;
 						}
-						((IServiceCapableConnection) conn).invoke(
-							"setNewModeratorByList",
-								new Object[] { currentMods }, this);
+						((IServiceCapableConnection) conn).invoke("setNewModeratorByList", new Object[] { currentMods }, this);
 					}
 				}
 			}
@@ -935,8 +912,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 		return -1L;
 	}
 
-	public synchronized Long setBroadCastingFlag(String publicSID,
-			boolean value, Integer interviewPodId) {
+	public synchronized Long setBroadCastingFlag(String publicSID, boolean value, Integer interviewPodId) {
 		try {
 			log.debug("-----------  setBroadCastingFlag: " + publicSID);
 
@@ -968,9 +944,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 							continue;
 						}
 					
-						((IServiceCapableConnection) conn).invoke(
-							"setNewBroadCastingFlag",
-								new Object[] { currentClient }, this);
+						((IServiceCapableConnection) conn).invoke("setNewBroadCastingFlag", new Object[] { currentClient }, this);
 					}
 				}
 			}
@@ -987,8 +961,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 			IConnection current = Red5.getConnectionLocal();
 			// String streamid = current.getClient().getId();
 
-			Client currentClient = this.sessionManager
-					.getClientByPublicSID(publicSID, false, null);
+			Client currentClient = sessionManager.getClientByPublicSID(publicSID, false, null);
 
 			if (currentClient == null) {
 				return -1L;
@@ -996,33 +969,25 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 
 			// Put the mod-flag to true for this client
 			currentClient.setMicMuted(false);
-			this.sessionManager.updateClientByStreamId(
-					currentClient.getStreamid(), currentClient, false, null);
+			sessionManager.updateClientByStreamId(currentClient.getStreamid(), currentClient, false, null);
 
 			// Notify all clients of the same scope (room)
 			for (IConnection conn : current.getScope().getClientConnections()) {
 				if (conn != null) {
-					Client rcl = this.sessionManager
-							.getClientByStreamId(conn.getClient().getId(), null);
+					Client rcl = sessionManager.getClientByStreamId(conn.getClient().getId(), null);
 					if (rcl == null) {
 						// continue;
-					} else if (rcl.getIsScreenClient() != null
-							&& rcl.getIsScreenClient()) {
+					} else if (rcl.getIsScreenClient() != null && rcl.getIsScreenClient()) {
 						// continue;
 					} else {
 						if (rcl != currentClient) {
 							rcl.setMicMuted(true);
-							this.sessionManager.updateClientByStreamId(
-									rcl.getStreamid(), rcl, false, null);
+							sessionManager.updateClientByStreamId(rcl.getStreamid(), rcl, false, null);
 						}
-						log.debug("Send Flag to Client: "
-								+ rcl.getUsername());
+						log.debug("Send Flag to Client: " + rcl.getUsername());
 						if (conn instanceof IServiceCapableConnection) {
-							((IServiceCapableConnection) conn).invoke(
-									"receiveExclusiveAudioFlag",
-									new Object[] { currentClient }, this);
-							log.debug("sending receiveExclusiveAudioFlag to "
-									+ conn);
+							((IServiceCapableConnection) conn).invoke("receiveExclusiveAudioFlag", new Object[] { currentClient }, this);
+							log.debug("sending receiveExclusiveAudioFlag to " + conn);
 						}
 					}
 				}
@@ -1112,13 +1077,13 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	 * 
 	 * @return long broadCastId
 	 */
-	public synchronized long getBroadCastId() {
+	public long getBroadCastId() {
 		try {
 			log.debug("-----------  getBroadCastId");
 			IConnection current = Red5.getConnectionLocal();
 			String streamid = current.getClient().getId();
 			Client client = sessionManager.getClientByStreamId(streamid, null);
-			client.setBroadCastID(broadCastCounter++);
+			client.setBroadCastID(broadCastCounter.getAndIncrement());
 			sessionManager.updateClientByStreamId(streamid, client, false, null);
 			return client.getBroadCastID();
 		} catch (Exception err) {
@@ -1205,18 +1170,13 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 			if (!room.isAppointment() && room.isModerated()) {
 				// if this is a Moderated Room then the Room can be only
 				// locked off by the Moderator Bit
-				List<Client> clientModeratorListRoom = this.sessionManager
-						.getCurrentModeratorByRoom(room_id);
+				List<Client> clientModeratorListRoom = sessionManager.getCurrentModeratorByRoom(room_id);
 
 				// If there is no Moderator yet and we are asking for it
 				// then deny it
 				// cause at this moment, the user should wait untill a
 				// Moderator enters the Room
-				if (clientModeratorListRoom.size() == 0) {
-					return false;
-				} else {
-					return true;
-				}
+				return clientModeratorListRoom.size() != 0;
 			} else {
 				// FIXME: TODO: For Rooms that are created as Appointment we
 				// have to check that too
@@ -1804,7 +1764,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 		return -1;
 	}
 
-	public synchronized int sendMessage(Object newMessage) {
+	public int sendMessage(Object newMessage) {
 		try {
 			
 			syncMessageToCurrentScope("sendVarsToMessage", newMessage, false);
@@ -1815,7 +1775,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 		return 1;
 	}
 	
-	public synchronized int sendMessageAll(Object newMessage) {
+	public int sendMessageAll(Object newMessage) {
 		try {
 			
 			syncMessageToCurrentScope("sendVarsToMessage", newMessage, true);
@@ -1840,8 +1800,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 
 			String action = newMessageList.get(0).toString();
 
-			BrowserStatus browserStatus = (BrowserStatus) current.getScope()
-					.getAttribute("browserStatus");
+			BrowserStatus browserStatus = (BrowserStatus) current.getScope().getAttribute("browserStatus");
 
 			if (browserStatus == null) {
 				browserStatus = new BrowserStatus();
@@ -1868,7 +1827,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	 * wrapper method
 	 * @param newMessage
 	 */
-	public synchronized void sendMessageToMembers(Object newMessage) {
+	public void sendMessageToMembers(Object newMessage) {
 		//Sync to all users of current scope
 		syncMessageToCurrentScope("sendVarsToMessage", newMessage, false);
 	}
@@ -1887,7 +1846,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	 * @param newMessage parameters
 	 * @param sendSelf send to the current client as well
 	 */
-	public synchronized void syncMessageToCurrentScope(String remoteMethodName, Object newMessage, boolean sendSelf) {
+	public void syncMessageToCurrentScope(String remoteMethodName, Object newMessage, boolean sendSelf) {
 		syncMessageToCurrentScope(remoteMethodName, newMessage, sendSelf, false);
 	}
 	
@@ -1900,7 +1859,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	 * @return true
 	 */
 	@Deprecated
-	public synchronized boolean loadTestSyncMessage(String remoteMethodName, Object newMessage, boolean sendSelf) {
+	public boolean loadTestSyncMessage(String remoteMethodName, Object newMessage, boolean sendSelf) {
 		syncMessageToCurrentScope(remoteMethodName, newMessage, sendSelf, false);
 		return true;
 	}
@@ -1921,32 +1880,31 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	 * @param sendSelf send to the current client as well
 	 * @param sendScreen send to the current client as well
 	 */
-	public synchronized void syncMessageToCurrentScope(String remoteMethodName, Object newMessage, boolean sendSelf, boolean sendScreen) {
+	public void syncMessageToCurrentScope(final String remoteMethodName, final Object newMessage, final boolean sendSelf, final boolean sendScreen) {
 		try {
-			IConnection current = Red5.getConnectionLocal();
+			final IConnection current = Red5.getConnectionLocal();
 
-			// Send to all Clients of that Scope(Room)
-			for (IConnection conn : current.getScope().getClientConnections()) {
-				if (conn != null) {
-					if (conn instanceof IServiceCapableConnection) {
-						IClient client = conn.getClient();
-						if (!sendScreen && SessionVariablesUtil.isScreenClient(client)) {
-							// screen sharing clients do not receive events
-							continue;
-						} else if (SessionVariablesUtil.isAVClient(client)) {
-							// AVClients or potential AVClients do not receive events
-							continue;
-						} else if (!sendSelf && client.getId().equals(
-								current.getClient().getId())) {
-							//Do not send back to self
-							continue;
+			new Thread(new Runnable() {
+			    public void run() {
+					for (IConnection conn : current.getScope().getClientConnections()) {
+						if (conn != null && conn instanceof IServiceCapableConnection) {
+							IClient client = conn.getClient();
+							if (!sendScreen && SessionVariablesUtil.isScreenClient(client)) {
+								// screen sharing clients do not receive events
+								continue;
+							} else if (SessionVariablesUtil.isAVClient(client)) {
+								// AVClients or potential AVClients do not receive events
+								continue;
+							} else if (!sendSelf && client.getId().equals(current.getClient().getId())) {
+								//Do not send back to self
+								continue;
+							}
+							((IServiceCapableConnection) conn).invoke(remoteMethodName, new Object[] { newMessage }, ScopeApplicationAdapter.this);
 						}
-						((IServiceCapableConnection) conn).invoke(
-								remoteMethodName, new Object[] { newMessage }, this);
-						
 					}
-				}
-			}
+			    }
+			}).start();
+			// Send to all Clients of that Scope(Room)
 		} catch (Exception err) {
 			log.error("[syncMessageToCurrentScope]", err);
 		}
@@ -1957,7 +1915,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	 * @param newMessage
 	 * @return 1 in case of success, -1 otherwise
 	 */
-	public synchronized int sendMessageWithClient(Object newMessage) {
+	public int sendMessageWithClient(Object newMessage) {
 		try {
 			sendMessageWithClientWithSyncObject(newMessage, true);
 
@@ -1977,8 +1935,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	public synchronized int sendMessageWithClientWithSyncObject(Object newMessage, boolean sync) {
 		try {
 			IConnection current = Red5.getConnectionLocal();
-			Client currentClient = this.sessionManager
-					.getClientByStreamId(current.getClient().getId(), null);
+			Client currentClient = sessionManager.getClientByStreamId(current.getClient().getId(), null);
 
 			HashMap<String, Object> hsm = new HashMap<String, Object>();
 			hsm.put("client", currentClient);
@@ -2002,8 +1959,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	 * @param clientId
 	 * @return 1 in case of success, -1 otherwise
 	 */
-	public synchronized int sendMessageById(Object newMessage, String clientId,
-			IScope scope) {
+	public synchronized int sendMessageById(Object newMessage, String clientId, IScope scope) {
 		try {
 			log.debug("### sendMessageById ###" + clientId);
 
@@ -2015,9 +1971,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 				if (conn != null) {
 					if (conn instanceof IServiceCapableConnection) {
 						if (conn.getClient().getId().equals(clientId)) {
-							((IServiceCapableConnection) conn).invoke(
-									"sendVarsToMessageWithClient",
-									new Object[] { hsm }, this);
+							((IServiceCapableConnection) conn).invoke("sendVarsToMessageWithClient", new Object[] { hsm }, this);
 						}
 					}
 				}
@@ -2039,8 +1993,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	public synchronized int sendMessageWithClientById(Object newMessage, String clientId) {
 		try {
 			IConnection current = Red5.getConnectionLocal();
-			Client currentClient = this.sessionManager
-					.getClientByStreamId(current.getClient().getId(), null);
+			Client currentClient = sessionManager.getClientByStreamId(current.getClient().getId(), null);
 
 			HashMap<String, Object> hsm = new HashMap<String, Object>();
 			hsm.put("client", currentClient);
@@ -2049,9 +2002,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 			// broadcast Message to specific user with id inside the same Scope
 			for (IConnection conn : current.getScope().getClientConnections()) {
 				if (conn.getClient().getId().equals(clientId)) {
-					((IServiceCapableConnection) conn).invoke(
-							"sendVarsToMessageWithClient",
-							new Object[] { hsm }, this);
+					((IServiceCapableConnection) conn).invoke("sendVarsToMessageWithClient", new Object[] { hsm }, this);
 				}
 			}
 		} catch (Exception err) {
@@ -2065,14 +2016,12 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 		try {
 			//if the upload is locally, just proceed to the normal function
 			//Search for RoomClient on current server (serverId == null means it will look on the master for the RoomClient)
-			Client currentClient = this.sessionManager
-								.getClientByPublicSID(publicSID, false, null);
+			Client currentClient = sessionManager.getClientByPublicSID(publicSID, false, null);
 			
 			if (currentClient != null) {
 				sendMessageWithClientByPublicSID(message, publicSID);
 			} else {
-				throw new Exception(
-						"Could not Find RoomClient on List publicSID: "+ publicSID);
+				throw new Exception("Could not Find RoomClient on List publicSID: "+ publicSID);
 			}
 			
 		} catch (Exception err) {
@@ -2081,25 +2030,20 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	}
 	
 
-	public synchronized void sendMessageWithClientByPublicSID(Object message,
-			String publicSID) {
+	public synchronized void sendMessageWithClientByPublicSID(Object message, String publicSID) {
 		try {
 			// ApplicationContext appCtx = getContext().getApplicationContext();
 			IScope globalScope = getContext().getGlobalScope();
 
-			IScope webAppKeyScope = globalScope
-					.getScope(OpenmeetingsVariables.webAppRootKey);
+			IScope webAppKeyScope = globalScope.getScope(OpenmeetingsVariables.webAppRootKey);
 
 			// log.debug("webAppKeyScope "+webAppKeyScope);
 
 			// Get Room Id to send it to the correct Scope
-			Client currentClient = this.sessionManager
-					.getClientByPublicSID(publicSID, false, null);
+			Client currentClient = sessionManager.getClientByPublicSID(publicSID, false, null);
 
 			if (currentClient == null) {
-				throw new Exception(
-						"Could not Find RoomClient on List publicSID: "
-								+ publicSID);
+				throw new Exception("Could not Find RoomClient on List publicSID: " + publicSID);
 			}
 			// default Scope Name
 			String scopeName = "hibernate";
@@ -2136,21 +2080,10 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 		}
 	}
 
-	public synchronized void sendMessageWithClientByPublicSIDOrUser(
-			Object message, String publicSID, Long user_id) {
+	public synchronized void sendMessageWithClientByPublicSIDOrUser(Object message, String publicSID, Long user_id) {
 		try {
-			// ApplicationContext appCtx = getContext().getApplicationContext();
-
-			IScope globalScope = getContext().getGlobalScope();
-
-			IScope webAppKeyScope = globalScope
-					.getScope(OpenmeetingsVariables.webAppRootKey);
-
-			// log.debug("webAppKeyScope "+webAppKeyScope);
-
 			// Get Room Id to send it to the correct Scope
-			Client currentClient = this.sessionManager
-					.getClientByPublicSID(publicSID, false, null);
+			Client currentClient = sessionManager.getClientByPublicSID(publicSID, false, null);
 
 			if (currentClient == null) {
 				currentClient = sessionManager.getClientByUserId(user_id);
@@ -2159,8 +2092,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 			Set<IConnection> conset = null;
 
 			if (currentClient == null) {
-				// Must be from a previous session, search for user in current
-				// scope
+				// Must be from a previous session, search for user in current scope
 				IConnection current = Red5.getConnectionLocal();
 				// Notify all Clients of that Scope (Room)
 				conset = current.getScope().getClientConnections();
@@ -2171,17 +2103,16 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 					scopeName = currentClient.getRoom_id().toString();
 				}
 
+				IScope globalScope = getContext().getGlobalScope();
+				IScope webAppKeyScope = globalScope.getScope(OpenmeetingsVariables.webAppRootKey);
 				IScope scopeHibernate = webAppKeyScope.getScope(scopeName);
 
 				if (scopeHibernate != null) {
-					conset = webAppKeyScope.getScope(scopeName).getClientConnections();
+					conset = scopeHibernate.getClientConnections();
 				}
 			}
 
-			// log.debug("scopeHibernate "+scopeHibernate);
-
 			// Notify the clients of the same scope (room) with user_id
-
 			for (IConnection conn : conset) {
 				if (conn != null) {
 					
@@ -2196,18 +2127,11 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 					
 					if (SessionVariablesUtil.getPublicSID(client).equals(publicSID)) {
 						// log.debug("IS EQUAL ");
-						((IServiceCapableConnection) conn).invoke(
-								"newMessageByRoomAndDomain",
-								new Object[] { message }, this);
-						log.debug("sendMessageWithClientByPublicSID RPC:newMessageByRoomAndDomain"
-								+ message);
-					} else if (user_id != 0
-							&& SessionVariablesUtil.getUserId(client).equals(user_id)) {
-						((IServiceCapableConnection) conn).invoke(
-								"newMessageByRoomAndDomain",
-								new Object[] { message }, this);
-						log.debug("sendMessageWithClientByPublicSID RPC:newMessageByRoomAndDomain"
-								+ message);
+						((IServiceCapableConnection) conn).invoke("newMessageByRoomAndDomain", new Object[] { message }, this);
+						log.debug("sendMessageWithClientByPublicSID RPC:newMessageByRoomAndDomain" + message);
+					} else if (user_id != 0 && SessionVariablesUtil.getUserId(client).equals(user_id)) {
+						((IServiceCapableConnection) conn).invoke("newMessageByRoomAndDomain", new Object[] { message }, this);
+						log.debug("sendMessageWithClientByPublicSID RPC:newMessageByRoomAndDomain" + message);
 					}
 				}
 			}
@@ -2282,9 +2206,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 						continue;
 					}
 
-					((IServiceCapableConnection) conn).invoke(
-							"interviewStatus",
-							new Object[] { interviewStatus }, this);
+					((IServiceCapableConnection) conn).invoke("interviewStatus", new Object[] { interviewStatus }, this);
 					log.debug("-- startInterviewRecording " + interviewStatus);
 				}
 			}
@@ -2300,8 +2222,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 	}
 
 	@SuppressWarnings({ "rawtypes" })
-	public synchronized Boolean sendRemoteCursorEvent(String streamid,
-			Map messageObj) {
+	public synchronized Boolean sendRemoteCursorEvent(String streamid, Map messageObj) {
 		try {
 
 			IConnection current = Red5.getConnectionLocal();
@@ -2311,9 +2232,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 					IClient client = conn.getClient();
 					if (SessionVariablesUtil.isScreenClient(client)) {
 						if (conn.getClient().getId().equals(streamid)) {
-							((IServiceCapableConnection) conn).invoke(
-									"sendRemoteCursorEvent",
-									new Object[] { messageObj }, this);
+							((IServiceCapableConnection) conn).invoke("sendRemoteCursorEvent", new Object[] { messageObj }, this);
 						}
 					}
 				}
@@ -2431,8 +2350,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 		try {
 
 			IScope globalScope = getContext().getGlobalScope();
-			IScope webAppKeyScope = globalScope
-					.getScope(OpenmeetingsVariables.webAppRootKey);
+			IScope webAppKeyScope = globalScope.getScope(OpenmeetingsVariables.webAppRootKey);
 
 			String scopeName = "hibernate";
 			// If set then its a NON default Scope
@@ -2511,11 +2429,8 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 		Client currentClient = sessionManager.getClientByStreamId(streamid, null);
 		try {
 			String sipNumber = getSipNumber(currentClient.getRoom_id());
-			log.debug("asterisk -rx \"originate Local/" + number + "@rooms-out extension " + sipNumber
-					+ "@rooms-originate\"");
-			Runtime.getRuntime().exec(
-					new String[] { "asterisk", "-rx",
-							"originate Local/" + number + "@rooms-out extension " + sipNumber + "@rooms-originate" });
+			log.debug("asterisk -rx \"originate Local/" + number + "@rooms-out extension " + sipNumber + "@rooms-originate\"");
+			Runtime.getRuntime().exec(new String[] { "asterisk", "-rx", "originate Local/" + number + "@rooms-out extension " + sipNumber + "@rooms-originate" });
 		} catch (IOException e) {
 			log.error("Executing asterisk originate error: ", e);
 		}
@@ -2562,7 +2477,7 @@ public class ScopeApplicationAdapter extends ApplicationAdapter implements IPend
 					continue;
 				}
 
-				if (!client.getId().equals(current.getClient().getId())) {
+				if (!client.getId().equals(streamid)) {
 					// It is not needed to send back that event to the actual Moderator
 					// as it will be already triggered in the result of this Function in the Client
 					if (conn instanceof IServiceCapableConnection) {
